update ui for mobile

--- a/app/views/groups/_edit_form.html.erb
+++ b/app/views/groups/_edit_form.html.erb
@@ -30,8 +30,9 @@
 
   <div class="row-fluid">
     <h2>General</h2>
-    <%= label_tag 'groupname', "Group name" %><%= f.text_field :name, :placeholder => "Cool name", :style => "width:100%;" %><br />
-    <%= label_tag 'description', 'Description' %><%= f.text_area :description, :rows => 6, :style => "width:100%;" %>
+    <%= label_tag 'groupname', "Group name" %><%= f.text_field :name, :placeholder => "Cool name", :style => "width:97%;" %><br />
+  <div class="row-fluid">
+    <%= label_tag 'description', 'Description' %><%= f.text_area :description, :rows => 6, :style => "width:97%;" %>
 
     <h2>Members</h2>
     <ul>
