--- a/app/views/groups/_new_form.html.erb
+++ b/app/views/groups/_new_form.html.erb
@@ -29,8 +29,8 @@
   <% end %>
 
   <div>
-    <%= label_tag 'group_name', "Group name:" %><%= f.text_field 'name', :placeholder => "Cool name", :style => "width:100%;" %><br />
-    <%= label_tag 'description', 'Description' %><%= f.text_area :description, :rows => 6, :style => "width:100%;" %>
+    <%= label_tag 'group_name', "Group name" %><%= f.text_field 'name', :placeholder => "Cool name", :style => "width:97%;" %><br />
+    <%= label_tag 'description', 'Description' %><%= f.text_area :description, :rows => 6, :style => "width:97%;" %>
     <%= label_tag 'others_label', 'Other members:' %>
     <ul id="add-members-list" data-name="add-members-list"></ul>
     <input id="invite_emails" name="invite_emails" type="hidden" value="" />
