--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -22,5 +22,5 @@
 <% end %>
 
 <div class="row-fluid">
-  <%= button_to "New Group", { :action => "new" }, { :class => "btn btn-large btn-primary", :method => "get", :style => "font-size:200%;" } %>
+  <%= button_to "New Group", { :action => "new" }, { :class => "btn btn-large btn-primary", :method => "get", :style => "font-size:225%; width:100%;" } %>
 </div>
