--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -26,7 +26,7 @@
 
 <div class="row-fluid">
   <div class="span9">
-    <div><h1 style="display:inline; margin-right:20px"><%= @group.name %></h1><%= link_to "Manage this group", edit_group_path(@group) %></div>
+    <div><h1 style="display:inline; margin-right:20px"><%= @group.name %></h1><%= link_to "Manage group", edit_group_path(@group) %></div>
 
     <%= render 'share_form' %>
 
