--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -3,6 +3,15 @@ body {
 	padding-top: 50px;
 }
 
+.pagination a {
+  float: left;
+  padding: 0 7px;
+  line-height: 25px;
+  text-decoration: none;
+  border: 1px solid #ddd;
+  border-left-width: 0;
+}
+
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
