--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="span8 offset2" style="text-align: center;">
-    <h1 style="font-size:500%; padding-top:80px; padding-bottom:20px;">grp of ppl</h1>
-    <h3>Because being together is more fun?</h3>
-    <%= button_to "Start a new group!", { :action => "new" }, { :class => "btn btn-large btn-primary", :method => "get", :style => "font-size:250%; margin-top:20px;" } %>
+    <h1 style="font-size:400%; padding-top:80px; padding-bottom:20px;">grp of ppl</h1>
+    <h4>Because being together is more fun?</h4>
+    <%= button_to "Start a new group!", { :action => "new" }, { :class => "btn btn-large btn-primary", :style => "wdith:100%;", :method => "get", :style => "font-size:225%; margin-top:20px;" } %>
     <a href="#forgot-modal" data-toggle="modal" onclick="$('#email').focus();">Forgot your sign in link?</a>
   </div>
 </div>
@@ -15,7 +15,7 @@
   <%= form_tag({:action => 'forgot' }, {:style => "padding:0;margin:0;"}) do %>
     <div class="modal-body">
       <div class="row-fluid">
-        <%= text_field_tag :email, nil, :placeholder => "your@email.com", :class => "span12", :id => "email-input" %>
+        <%= text_field_tag :email, nil, :placeholder => "your@email.com", :style=> "width:98%;", :id => "email-input" %>
       </div>
     </div>
     <div class="modal-footer">
