--- a/app/views/kaminari/_paginator.html.erb
+++ b/app/views/kaminari/_paginator.html.erb
@@ -9,7 +9,9 @@
 <%= paginator.render do -%>
   <nav class="pagination">
     <ul>
-      <%= first_page_tag unless current_page.first? %>
+      <% if false %>
+        <%= first_page_tag unless current_page.first? %>
+      <% end %>
       <%= prev_page_tag unless current_page.first? %>
       <% each_page do |page| -%>
         <% if page.left_outer? || page.right_outer? || page.inside_window? -%>
@@ -19,7 +21,9 @@
         <% end -%>
       <% end -%>
       <%= next_page_tag unless current_page.last? %>
-      <%= last_page_tag unless current_page.last? %>
+      <% if false %>
+        <%= last_page_tag unless current_page.last? %>
+      <% end %>
     </ul>
   </nav>
 <% end -%>
