update permalink margins

--- a/app/views/posts/permalink.html.erb
+++ b/app/views/posts/permalink.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="margin:20px;">
   <div class="span6 offset3 post-container">
     <%= render :partial => 'user_post', :locals => { :user_post => @post, :group => @group, :permalink => true } %>
   </div>
